<resources>
    <string name="app_name">Tutorial 03</string>
    <string name="txtHeading">Login</string>
    <string name="EUserName">User name</string>
    <string name="loginButton">Login</string>
    <string name="uPsw">Password</string>
    <string name="activityName">Login Page</string>
    <string name="enterUserName">Enter email address</string>
    <string name="enterPassword">Enter password</string>
    <string name="loginButton">Login</string>
</resources>